tests/unit/parser/invalid-problems/repeated-object-definition.pddl
; object with name `bob` (4:32) is defined multiple times in objects section
(define (problem repeated-object-definition)
        (:domain invalid-problems-domain)
        (:objects bob - person bob - room)
        (:goal (and)))